Thu Oct 19 21:58:32 EDT 2006 / Charles Lepple <clepple@gmail.com>

 - tripplite_usb: updated documentation to better reflect regex matching
   operation.

Thu Oct 19 00:10:15 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: fixed premature "free" error.

Tue Oct 17 19:08:28 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added ProductID for Belkin F6C900-UNV (050d/0900)

Mon Oct 16 19:07:46 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups/libhid: fixed array overflow bug in upsdrv_updateinfo(),
   reported by Jacob Schmier.
 - newhidups.h: deleted some unused #define's

Tue Oct 10 01:29:22 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - mge-shut: made report buffer mechanism compatible with newmge-shut,
   cleaned up an unused variable from mge-shut.
 - updated dependencies for rhino

Fri Sep 29 17:17:50 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - drivers/rhino.c: fixed array bounds error, cleanup (made global
   variables static, removed unused variables, removed header file).

Wed Sep 27 23:50:15 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - path-to-subdriver.sh: added command line options

Wed Sep 27 00:36:09 EDT 2006 / Charles Lepple <clepple@gmail.com>

 - tripplite_usb: Updated SMARTPRO support based on Jeff Knerr's feedback.
   This should fix the OL/OB issue, and maybe even the temperature reading.

Tue Sep 26 21:22:27 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - driver.list: added Tripp-Lite OMNI650LCD and OMNI900LCD

Sun Sep 24 03:38:25 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - merged report buffer branch into trunk. See log message for 
   revision r274, Thu Nov 24 03:36:14 UTC 2005.

Sun Sep 24 01:49:40 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - path-to-subdriver.sh: added reminder to "make depend"
 - newhidups subdrivers: added #include "main.h" to keep compiler quiet.